--- a/requirements.txt
+++ b/requirements.txt
@@ -1,127 +1,9 @@
-aniso8601==8.0.0
-apturl==0.5.2
-attrs==21.4.0
-autopep8==1.6.0
-awsebcli==3.20.3
-bcrypt==3.1.7
-blessed==1.19.1
-blinker==1.4
-botocore==1.23.54
-Brlapi==0.7.0
-cached-property==1.5.2
-cement==2.8.2
-certifi==2019.11.28
-chardet==3.0.4
-chrome-gnome-shell==0.0.0
-click==7.1.2
-colorama==0.4.3
-command-not-found==0.3
-cryptography==2.8
-cupshelpers==1.0
-dbus-python==1.2.16
-defer==1.0.6
-distro==1.4.0
-distro-info===0.23ubuntu1
-docker==4.4.4
-docker-compose==1.25.5
-dockerpty==0.4.1
-docopt==0.6.2
-duplicity==0.8.12.0
-entrypoints==0.3
-fasteners==0.14.1
-flake8==4.0.1
-Flask==1.1.2
-Flask-RESTful==0.3.8
-Flask-SQLAlchemy==2.4.3
-future==0.16.0
-httplib2==0.14.0
-idna==2.8
+click==8.1.2
+Flask==2.1.1
+gunicorn==20.1.0
 importlib-metadata==4.11.3
-itsdangerous==1.1.0
-Jinja2==2.11.2
-jmespath==0.10.0
-jsonschema==3.2.0
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lockfile==0.12.2
-louis==3.12.0
-macaroonbakery==1.3.1
-Mako==1.1.0
-MarkupSafe==1.1.1
-marshmallow==3.15.0
-mccabe==0.6.1
-monotonic==1.5
-mypy==0.941
-mypy-extensions==0.4.3
-netifaces==0.10.4
-node==1.0
-numpy==1.21.4
-oauthlib==3.1.0
-odict==1.8.1
-olefile==0.46
-packaging==21.3
-paramiko==2.6.0
-pathspec==0.9.0
-pexpect==4.6.0
-Pillow==7.0.0
-plumber==1.7
-protobuf==3.6.1
-psutil==5.5.1
-py==1.11.0
-pycairo==1.16.2
-pycodestyle==2.8.0
-pycups==1.9.73
-pyflakes==2.4.0
-pygame==2.1.2
-PyGObject==3.36.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyparsing==3.0.8
-pyRFC3339==1.1
-pyrsistent==0.18.1
-python-apt==2.0.0+ubuntu0.20.4.7
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
-python-dotenv==0.20.0
-pytz==2020.1
-pyxdg==0.26
-PyYAML==5.3.1
-reportlab==3.5.34
-requests==2.22.0
-requests-unixsocket==0.2.0
-SecretStorage==2.3.1
-semantic-version==2.8.5
-simplejson==3.16.0
-six==1.14.0
-speedtest-cli==2.1.2
-SQLAlchemy==1.3.18
-systemd-python==234
-termcolor==1.1.0
-texttable==1.6.4
-toml==0.10.2
-tomli==2.0.1
-typing-extensions==4.1.1
-ubuntu-advantage-tools==27.7
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.26.9
-usb-creator==0.3.7
-wadllib==1.3.3
-wcwidth==0.1.9
-websocket-client==0.59.0
-Werkzeug==1.0.1
-xkit==0.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.1
+MarkupSafe==2.1.1
+Werkzeug==2.1.1
 zipp==3.8.0
-zope.component==5.0.1
-zope.deferredimport==4.4
-zope.deprecation==4.4.0
-zope.event==4.5.0
-zope.hookable==5.1.0
-zope.interface==5.4.0
-zope.lifecycleevent==4.3
-zope.proxy==4.5.0
