--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 alembic==1.7.7
+Authlib==1.0.1
 blinker==1.4
+cffi==1.15.0
 click==8.1.3
+cryptography==37.0.2
 dnspython==2.2.1
 dominate==2.6.0
 email-validator==1.2.1
@@ -21,6 +24,9 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.0
 MarkupSafe==2.1.1
+psycopg2-binary==2.9.3
+pycparser==2.21
+PyJWT==2.3.0
 SQLAlchemy==1.4.36
 visitor==0.1.3
 Werkzeug==2.1.2
